fix dark mode

--- a/src/front/shared/pages/Marketmaker/MarketmakerSettings.scss
+++ b/src/front/shared/pages/Marketmaker/MarketmakerSettings.scss
@@ -62,7 +62,6 @@
         }
 
         .balanceSecondary, .balancePrimary {
-          color: #1f2d48;
           font-weight: bold;
         }
 
